--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <button onclick="generate()">点我</button>
     <p id="words">点它⬆️</p>
     <h1>水平千古 无上光荣！</h1>
+	  <h3>须知</h3>
+	  <br>
+	  <p>谨以此网站，献给工作室里日日夜夜辛勤劳作的柳校长，纪念一段在我们物理学习生涯中不可磨灭的记忆</p>
+    <p color="red">beta版本非最终版本</p>
   </body>
   <script>
 		function generate() {
