--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div><p id="words">点它⬆️</p></div>
   <h1>水平千古 无上光荣！</h1>
   <h3>须知</h3>
+	<p>虽然柳老师离开了我们，但是他的金句永远不会消失。希望这些金句能够时刻提醒我们柳老师的教诲</p>
 	<p>谨以此网站，献给工作室里日日夜夜辛勤劳作的柳校长，纪念一段在我们物理学习生涯中不可磨灭的记忆</p>
   <p color="red">beta版本非最终版本</p>
 </body>
@@ -80,6 +81,6 @@ function word3() {
         }*/
 </script>
 <style>
-div{width:600px;height:50px;border:1px solid #000}
+div{width:700px;height:50px;border:1px solid #000}
 </style>
 </html>
