--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
-<head>
-  <title>InterWorld</title>
-  <meta charset="utf-8">
-</head>
-
-<body>
-  <h1>InterWorld</h1>
-  <h2>一个有想法的网站</h2>
-</body>
-
+	<head>
+		<meta charset="utf-8" />
+		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<title>InterWorld</title>
+	</head>
+	<body>
+		<h1 id="maintitle">InterWorld</h1>
+		<h2 id="subtitle">一个有想法的网站</h2>
+	</body>
 </html>
