--- a/index.html
+++ b/index.html
@@ -2,11 +2,25 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
+		<script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
+		<script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
+		<link rel="stylesheet" type="text/css" href="index.css">
 		<title>InterWorld</title>
+		<script>
+			function toLsp() {
+				location.href = "lsp.html"
+			}
+		</script>
 	</head>
 	<body>
-		<h1 id="maintitle">InterWorld</h1>
-		<h2 id="subtitle">一个有想法的网站</h2>
+		<div class="welcome">
+			<h1 id="maintitle">InterWorld</h1>
+			<h2 id="subtitle">一个有想法的网站</h2>
+			<br><br>
+		</div>
+		<button type="button" class="btn btn-outline-primary" onclick="toLsp()">纪念·柳<i class="fa fa-cog"></i></button>
 	</body>
 </html>
