--- a/lsp.html
+++ b/lsp.html
@@ -4,11 +4,15 @@
 <head>
   <title>纪念•永远的柳老师</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
+  <script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
+  <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 </head>
 
 <body>
-  <h1>柳老师哲言生成器(Beta)</h1>
-  <h2>“……最后，不管是基础中等的，还是差的，你们都要记住，还有一年半的时间，基础一定可以赶上来的！……还有，考试的时候，不要抄，没用的。不要想着去用抄的方法，改变那几分……咬定青山不放松……最后，祝考好！……（掌声）”</h2>
+  <h1 id="maintitle">柳老师哲言生成器(Beta)</h1>
+  <h2 id="subtitle">“……最后，不管是基础中等的，还是差的，你们都要记住，还有一年半的时间，基础一定可以赶上来的！……还有，考试的时候，不要抄，没用的。不要想着去用抄的方法，改变那几分……咬定青山不放松……最后，祝考好！……（掌声）”</h2>
   <button onclick="syntax()">点我</button>
   <div><p id="words">点它⬆️</p></div>
   <h1>水平千古 无上光荣！</h1>
