--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 			function toLsp() {
 				location.href = "lsp.html"
 			}
+			function toTrade () {
+				location.href = "trade.html"
+			}
 		</script>
 	</head>
 	<body>
@@ -22,5 +25,8 @@
 			<br><br>
 		</div>
 		<button type="button" class="btn btn-outline-primary" onclick="toLsp()">纪念·柳<i class="fa fa-cog"></i></button>
+		<span class="badge bg-warning">待完善</span>
+		<br>
+		<button type="button" class="btn btn-outline-warning" onclick="toTrade()">地下狗蛙交易市场</button>
 	</body>
 </html>
