--- a/trade.html
+++ b/trade.html
@@ -18,5 +18,36 @@
 			<h2 id="subtitle">网络不是法外之地，文明交易</h2>
 			<br><br>
 		</div>
+		<!-- 轮播 -->
+		<div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+		 <!-- 指示符 -->
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+				<button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+				<button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+			</div>
+
+			<!-- 轮播图片 -->
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="gw/bread.png" class="d-block" style="width:100%">
+				</div>
+				<div class="carousel-item">
+					<img src="gw/angry.png" class="d-block" style="width:100%">
+				</div>
+				<div class="carousel-item">
+					<img src="gw/original.png" class="d-block" style="width:100%">
+				</div>
+			</div>
+
+			<!-- 左右切换按钮 -->
+			<button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon"></span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+		 	<span class="carousel-control-next-icon"></span>
+			</button>
+		</div>
 	</body>
 </html>
