--- a/trade.html
+++ b/trade.html
@@ -13,6 +13,22 @@
 		</script>
 	</head>
 	<body>
+		<div class="container">
+			<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+				<a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-bright text-decoration-none">
+					<i class="fa fa-safari" style="font-size:36px"></i>
+					<span class="fs-4">InterWorld网站</span>
+				</a>
+		
+				<ul class="nav nav-pills">
+					<li class="nav-item"><a href="/index.html" class="nav-link" aria-current="page">Home</a></li>
+					<li class="nav-item"><a href="#" class="nav-link active">狗蛙交易</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">LSP</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">About</a></li>
+				</ul>
+			</header>
+		</div>
 		<div class="welcome">
 			<h1 id="maintitle">狗蛙交易市场</h1>
 			<h2 id="subtitle">网络不是法外之地，文明交易</h2>
