--- a/index.html
+++ b/index.html
@@ -13,12 +13,31 @@
 			function toLsp() {
 				location.href = "lsp.html"
 			}
-			function toTrade () {
+
+			function toTrade() {
 				location.href = "trade.html"
 			}
 		</script>
 	</head>
 	<body>
+		<div class="container">
+			<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+				<a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-bright text-decoration-none">
+					<i class="fa fa-safari" style="font-size:36px"></i>
+					<span class="fs-4">InterWorld网站</span>
+				</a>
+
+				<ul class="nav nav-pills">
+					<li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+					<li class="nav-item"><a href="trade.html" class="nav-link">狗蛙交易</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">LSP</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">About</a></li>
+				</ul>
+			</header>
+		</div>
+
+		<div class="b-example-divider"></div>
 		<div class="welcome">
 			<h1 id="maintitle">InterWorld</h1>
 			<h2 id="subtitle">一个有想法的网站</h2>
