--- a/trade.html
+++ b/trade.html
@@ -65,6 +65,23 @@
 		 	<span class="carousel-control-next-icon"></span>
 			</button>
 		</div>
-		<p>目前还没有狗蛙待出售</p>
+		<table style="width: 100%;">
+			<tr>
+				<th style="width: 50%;">
+					<div class="card">
+						<h1>少女狗蛙</h1><button>buy</button>
+						<img src="gw/girl.png" width="100%" height="100%">
+						<button>buy</button>
+					</div>
+				</th>
+				<th style="width: 50%;">
+					<div class="card">
+						<h1>原汁原味</h1>
+						<img src="gw/original.png" width="100%" height="100%">
+						<button>buy</button>
+					</div>
+				</th>
+			</tr>
+		</table>
 	</body>
 </html>
