--- a/trade.html
+++ b/trade.html
@@ -69,16 +69,16 @@
 			<tr>
 				<th style="width: 50%;">
 					<div class="card">
-						<h1>少女狗蛙</h1><button>buy</button>
+						<h1>少女狗蛙</h1>
 						<img src="gw/girl.png" width="100%" height="100%">
-						<button>buy</button>
+						<button type="button" class="btn btn-primary active">购买</button>
 					</div>
 				</th>
 				<th style="width: 50%;">
 					<div class="card">
 						<h1>原汁原味</h1>
 						<img src="gw/original.png" width="100%" height="100%">
-						<button>buy</button>
+						<button type="button" class="btn btn-primary active" disabled>缺货</button>
 					</div>
 				</th>
 			</tr>
