--- a/trade.html
+++ b/trade.html
@@ -82,6 +82,23 @@
 					</div>
 				</th>
 			</tr>
+			
+			<tr>
+				<th style="width: 50%;">
+					<div class="card">
+						<h1>狗蛙面包</h1>
+						<img src="gw/bread.png" width="100%" height="100%">
+						<button type="button" class="btn btn-primary active">购买</button>
+					</div>
+				</th>
+				<th style="width: 50%;">
+					<div class="card">
+						<h1>生猛狗蛙</h1>
+						<img src="gw/angry.png" width="100%" height="100%">
+						<button type="button" class="btn btn-primary active">缺货</button>
+					</div>
+				</th>
+			</tr>
 		</table>
 	</body>
 </html>
