--- a/trade.html
+++ b/trade.html
@@ -10,6 +10,18 @@
 		<link rel="stylesheet" type="text/css" href="index.css">
 		<title>狗蛙交易市场</title>
 		<script>
+			function toOriginal() {
+				location.href = "buy/original.html"
+			}
+			function toBread() {
+				location.href = "buy/bread.html"
+			}
+			function toGirl() {
+				location.href = "buy/girl.html"
+			}
+			function toAngry() {
+				location.href = "buy/angry.html"
+			}
 		</script>
 	</head>
 	<body>
@@ -24,7 +36,7 @@
 					<li class="nav-item"><a href="/index.html" class="nav-link" aria-current="page">Home</a></li>
 					<li class="nav-item"><a href="#" class="nav-link active">狗蛙交易</a></li>
 					<li class="nav-item"><a href="#" class="nav-link">LSP</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">我的狗蛙</a></li>
 					<li class="nav-item"><a href="#" class="nav-link">About</a></li>
 				</ul>
 			</header>
@@ -71,7 +83,7 @@
 					<div class="card">
 						<h1>少女狗蛙</h1>
 						<img src="gw/girl.png" width="100%" height="100%">
-						<button type="button" class="btn btn-primary active">购买</button>
+						<button type="button" class="btn btn-primary active" onclick="toGirl()">购买</button>
 					</div>
 				</th>
 				<th style="width: 50%;">
@@ -88,14 +100,14 @@
 					<div class="card">
 						<h1>狗蛙面包</h1>
 						<img src="gw/bread.png" width="100%" height="100%">
-						<button type="button" class="btn btn-primary active">购买</button>
+						<button type="button" class="btn btn-primary active" onclick="toBread()">购买</button>
 					</div>
 				</th>
 				<th style="width: 50%;">
 					<div class="card">
 						<h1>生猛狗蛙</h1>
 						<img src="gw/angry.png" width="100%" height="100%">
-						<button type="button" class="btn btn-primary active">缺货</button>
+						<button type="button" class="btn btn-primary active" onclick="toAngry()"></button>
 					</div>
 				</th>
 			</tr>
