--- a/buy/angry.html
+++ b/buy/angry.html
@@ -9,10 +9,17 @@
 		<link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="buy.css">
 		<title>购买</title>
+		<script>
+			function confirm() {
+			    sessionStorage.name = "angry"
+				location.href = "/buy/pay.html"
+			}
+		</script>
 	</head>
 	<body>
 		<h1 id="maintitle">生猛狗蛙</h1>
 		<h2 id="subtitle">99<i class="fa fa-bitcoin" style="font-size:36px;color: white;"></i></h2>
 		<img src="../gw/angry.png">
+		<br><button onclick="confirm()">确定付款</button>
 	</body>
 </html>
