--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
 				} else {
 					sessionStorage.name = "";
 				}
+				if (sessionStorage.cname) {
+					sessionStorage.cname = "";
+				} else {
+					sessionStorage.cname = "";
+				}
+				if (sessionStorage.billinfo) {
+					sessionStorage.billinfo = 0;
+				} else {
+					sessionStorage.billinfo = 0;
+				}
 			}
 		</script>
 	</head>
