--- a/buy/angry.html
+++ b/buy/angry.html
@@ -10,9 +10,17 @@
 		<link rel="stylesheet" type="text/css" href="buy.css">
 		<title>购买</title>
 		<script>
+			sessionStorage.billinfo = 99
 			function confirm() {
-			    sessionStorage.name = "angry"
-				location.href = "/buy/pay.html"
+				if (localStorage.clickcount >= sessionStorage.billinfo) {
+					sessionStorage.name = "angry"
+					sessionStorage.cname = "生猛狗蛙"
+					localStorage.clickcount -= sessionStorage.billinfo
+					location.href = "/InterWorld/buy/pay.html"
+				} else {
+					alert("余额不足")
+				}
+			    
 			}
 		</script>
 	</head>
