--- a/buy/girl.html
+++ b/buy/girl.html
@@ -10,9 +10,16 @@
 		<link rel="stylesheet" type="text/css" href="buy.css">
 		<title>购买</title>
 		<script>
+			sessionStorage.billinfo = 49
 			function confirm() {
-			    sessionStorage.name = "girl"
-				location.href = "/buy/pay.html"
+				if (localStorage.clickcount >= sessionStorage.billinfo) {
+					sessionStorage.name = "girl"
+					sessionStorage.cname = "少女狗蛙"
+					localStorage.clickcount -= sessionStorage.billinfo
+					location.href = "/InterWorld/buy/pay.html"
+				} else {
+					alert("余额不足")
+				}
 			}
 		</script>
 	</head>
