--- a/buy/girl.html
+++ b/buy/girl.html
@@ -16,7 +16,7 @@
 					sessionStorage.name = "girl"
 					sessionStorage.cname = "少女狗蛙"
 					localStorage.clickcount -= sessionStorage.billinfo
-					location.href = "/InterWorld/buy/pay.html"
+					location.href = "/buy/pay.html"
 				} else {
 					alert("余额不足")
 				}
