--- a/buy/original.html
+++ b/buy/original.html
@@ -16,7 +16,7 @@
 					sessionStorage.name = "original"
 					sessionStorage.cname = "原汁原味"
 					localStorage.clickcount -= sessionStorage.billinfo
-					location.href = "/InterWorld/buy/pay.html"
+					location.href = "buy/pay.html"
 				} else {
 					alert("余额不足")
 				}
