--- a/buy/angry.html
+++ b/buy/angry.html
@@ -16,7 +16,7 @@
 					sessionStorage.name = "angry"
 					sessionStorage.cname = "生猛狗蛙"
 					localStorage.clickcount -= sessionStorage.billinfo
-					location.href = "/InterWorld/buy/pay.html"
+					location.href = "/buy/pay.html"
 				} else {
 					alert("余额不足")
 				}
