--- a/buy/bread.html
+++ b/buy/bread.html
@@ -16,7 +16,7 @@
 					sessionStorage.name = "bread"
 					sessionStorage.cname = "狗蛙面包"
 					localStorage.clickcount -= sessionStorage.billinfo
-					location.href = "/InterWorld/buy/pay.html"
+					location.href = "/buy/pay.html"
 				} else {
 					alert("余额不足")
 				}
