--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<ul class="nav nav-pills">
 					<li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
 					<li class="nav-item"><a href="trade.html" class="nav-link">狗蛙交易</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">LSP</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">我的</a></li>
 					<li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
 					<li class="nav-item"><a href="#" class="nav-link">About</a></li>
 				</ul>
