--- a/trade.html
+++ b/trade.html
@@ -35,8 +35,8 @@
 				<ul class="nav nav-pills">
 					<li class="nav-item"><a href="/index.html" class="nav-link" aria-current="page">Home</a></li>
 					<li class="nav-item"><a href="#" class="nav-link active">狗蛙交易</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">LSP</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">我的狗蛙</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">我的</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">FaQs</a></li>
 					<li class="nav-item"><a href="#" class="nav-link">About</a></li>
 				</ul>
 			</header>
