--- a/lsp.html
+++ b/lsp.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>纪念•永远的柳老师</title>
-  <meta charset="utf-8">
+  <meta charset="utf-8" maximum-scale=1.0, user-scalable=0;>
   <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
   <script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
   <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
