--- a/trade.html
+++ b/trade.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=0;">
 		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
 		<script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
 		<script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
@@ -107,7 +107,7 @@
 					<div class="card">
 						<h1>生猛狗蛙</h1>
 						<img src="gw/angry.png" width="100%" height="100%">
-						<button type="button" class="btn btn-primary active" onclick="toAngry()"></button>
+						<button type="button" class="btn btn-primary active" onclick="toAngry()">购买</button>
 					</div>
 				</th>
 			</tr>
