--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0;">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
 		<script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
 		<script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
@@ -20,6 +20,13 @@
 			function toMine() {
 				location.href = "mine.html"
 			}
+			function toTerminal() {
+				if (document.getElementById("password").value == "Capitalism will DIE!") {
+					location.href = "terminal.html"
+				} else {
+					alert("密码错误");
+				}
+			}
 			function clickCounter() {
 				if (typeof(Storage) !== "undefined") {
 					if (localStorage.clickcount) {
@@ -28,10 +35,16 @@
 						localStorage.clickcount = 1;
 					}
 					document.getElementById("money").innerHTML = "余额： " + localStorage.clickcount +
-						"<i class='fa fa-bitcoin' style='font-size:36px;color: white;'></i>";
+						"<i class='fa fa-bitcoin' style='color: white;'></i>";
 				} else {
 					document.getElementById("money").innerHTML = "Sorry, your browser does not support web storage...";
 				}
+			}
+			function roll() {
+				p = Math.floor(Math.random()*10)
+				localStorage.clickcount = Number(localStorage.clickcount) + p
+				document.getElementById("money").innerHTML = "余额： " + localStorage.clickcount +
+					"<i class='fa fa-bitcoin' style='color: white;'></i>";
 			}
 			if (typeof(Storage) !== "undefined") {
 				if (sessionStorage.name) {
@@ -81,7 +94,14 @@
 		<br>
 		<button type="button" class="btn btn-outline-warning" onclick="toTrade()">地下狗蛙交易市场</button>
 		<br>
-		<button type="button" class="btn btn-outline-warning" onclick="clickCounter()">点我!</button>
+		<button type="button" class="btn btn-outline-info" onclick="clickCounter()">点我!</button>
 		<p style="color: white;size: 36px;" id="money"></p>
+		<button type="button" class="btn btn-outline-success"onclick="roll()">抽奖</button><p id="price"></p>
+		<button type="button" class="btn btn-outline-primary" onclick="toTerminal()">控制台<i class="fa fa-cog"></i></button>
+		<input id="password" placeholder="密码"/>
+		<script>
+			document.getElementById("money").innerHTML = "余额： " + localStorage.clickcount +
+				"<i class='fa fa-bitcoin' style='color: white;'></i>";
+		</script>
 	</body>
 </html>
