--- a/trade.html
+++ b/trade.html
@@ -22,6 +22,9 @@
 			function toAngry() {
 				location.href = "buy/angry.html"
 			}
+			function toPassword() {
+				location.href = "buy/password.html"
+			}
 		</script>
 	</head>
 	<body>
@@ -108,6 +111,20 @@
 						<h1>生猛狗蛙</h1>
 						<img src="gw/angry.png" width="100%" height="100%">
 						<button type="button" class="btn btn-primary active" onclick="toAngry()">购买</button>
+					</div>
+				</th>
+			</tr>
+			<tr>
+				<th style="width: 50%;">
+					<div class="card">
+						<h1>控制台密码</h1>
+						<button type="button" class="btn btn-primary active" onclick="toPassword()">购买</button>
+					</div>
+				</th>
+				<th style="width: 50%;">
+					<div class="card">
+						<h1>控制台教程</h1>
+						<button type="button" class="btn btn-primary active" disabled>缺货</button>
 					</div>
 				</th>
 			</tr>
