--- a/buy/password.html
+++ b/buy/password.html
@@ -14,7 +14,7 @@
 			function confirm() {
 				if (localStorage.clickcount >= sessionStorage.billinfo) {
 					sessionStorage.name = "original"//这里的original是作为默认图片的名字
-					sessionStorage.cname = "密码为'Capitalism will DIE!'"//有问题
+					sessionStorage.cname = "密码为'Capitalism will DIE!'"
 					localStorage.clickcount -= sessionStorage.billinfo
 					location.href = "/buy/pay.html"
 					localStorage.isBuy = 1;
