--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				"<i class='fa fa-bitcoin' style='color: white;'></i>";
 			if (localStorage.isBuy == 1) {
 				document.getElementById("psd").innerHTML = "密码:Capitalism will DIE!"
-			}
+			}//有问题
 		</script>
 	</body>
 </html>
