--- a/buy/pay.html
+++ b/buy/pay.html
@@ -22,6 +22,6 @@
 		}
 		document.getElementById("pic").src = "../gw/" + sessionStorage.name + ".png"
 		document.getElementById("maintitle").innerHTML = "获取了一只" + sessionStorage.cname
-		document.getElementById("maintitle").innerHTML = "-" + sessionStorage.billinfo +"<i class='fa fa-bitcoin' style='font-size:36px;color: white;'></i>";
+		document.getElementById("subtitle").innerHTML = "-" + sessionStorage.billinfo +"<i class='fa fa-bitcoin' style='font-size:36px;color: white;'></i>";
 	</script>
 </html>
