--- a/buy/angry.html
+++ b/buy/angry.html
@@ -16,6 +16,7 @@
 					sessionStorage.name = "angry"
 					sessionStorage.cname = "生猛狗蛙"
 					localStorage.clickcount -= sessionStorage.billinfo
+					localStorage.have = localStorage.have.concat("a")
 					location.href = "/buy/pay.html"
 				} else {
 					alert("余额不足")
