--- a/buy/girl.html
+++ b/buy/girl.html
@@ -16,6 +16,7 @@
 					sessionStorage.name = "girl"
 					sessionStorage.cname = "少女狗蛙"
 					localStorage.clickcount -= sessionStorage.billinfo
+					localStorage.have = localStorage.have.concat("g")
 					location.href = "/buy/pay.html"
 				} else {
 					alert("余额不足")
