--- a/buy/password.html
+++ b/buy/password.html
@@ -16,8 +16,10 @@
 					sessionStorage.name = "original"//这里的original是作为默认图片的名字
 					sessionStorage.cname = "密码为'Capitalism will DIE!'"
 					localStorage.clickcount -= sessionStorage.billinfo
-					location.href = "/buy/pay.html"
 					localStorage.isBuy = 1;
+					localStorage.have = localStorage.have.concat("p")
+					location.href = "/buy/pay.html"
+					
 				} else {
 					alert("余额不足")
 				}
