--- a/mine.html
+++ b/mine.html
@@ -17,7 +17,7 @@
 					<i class="fa fa-safari" style="font-size:36px"></i>
 					<span class="fs-4">InterWorld网站</span>
 				</a>
-		
+
 				<ul class="nav nav-pills">
 					<li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
 					<li class="nav-item"><a href="trade.html" class="nav-link">狗蛙交易</a></li>
@@ -27,10 +27,53 @@
 				</ul>
 			</header>
 		</div>
-		
 		<div class="b-example-divider"></div>
+		<div id="imgs"></div>
 		<script>
-			
+			/*
+			a:angry
+			b:bread
+			g:girl
+			o:original
+			p:password
+			*/
+			for (let i = 0; i < localStorage.have.length; i++) {
+				if (localStorage.have[i] == "a") {
+					var imga = document.createElement("img")
+					imga.src = "/gw/angry.png"
+					imga.id = "imga"
+					imga.width = 100 %
+						document.body.appendChild(imga)
+				}
+				if (localStorage.have[i] == "b") {
+					var imgb = document.createElement("img")
+					imgb.src = "/gw/bread.png"
+					imgb.id = "imgb"
+					imgb.width = 100 %
+					document.body.appendChild(imgb)
+				}
+				if (localStorage.have[i] == "g") {
+					var imgg = document.createElement("img")
+					imgg.src = "/gw/girl.png"
+					imgg.id = "imgg"
+					imgg.width = 100 %
+					document.body.appendChild(imgg)
+				}
+				if (localStorage.have[i] == "o") {
+					var imgo = document.createElement("img")
+					imgo.src = "/gw/original.png"
+					imgo.id = "imgo"
+					imgo.width = 100 %
+					document.body.appendChild(imgo)
+				}
+				if (localStorage.have[i] == "p") {
+					var psd = document.createElement("p")
+					psd.innerHTML = "密码为:Capitalism willDIE!"
+					psd.style = "color:white;"
+					psd.id = "psd"
+					document.body.appendChild(psd)
+				}
+			}
 		</script>
 	</body>
 </html>
