--- a/mine.html
+++ b/mine.html
@@ -42,28 +42,28 @@
 					var imga = document.createElement("img")
 					imga.src = "/gw/angry.png"
 					imga.id = "imga"
-					imga.width = 100 %
+					imga.style = "width: 100%"
 						document.body.appendChild(imga)
 				}
 				if (localStorage.have[i] == "b") {
 					var imgb = document.createElement("img")
 					imgb.src = "/gw/bread.png"
 					imgb.id = "imgb"
-					imgb.width = 100 %
+					imgb.style = "width: 100%"
 					document.body.appendChild(imgb)
 				}
 				if (localStorage.have[i] == "g") {
 					var imgg = document.createElement("img")
 					imgg.src = "/gw/girl.png"
 					imgg.id = "imgg"
-					imgg.width = 100 %
+					imgg.style = "width: 100%"
 					document.body.appendChild(imgg)
 				}
 				if (localStorage.have[i] == "o") {
 					var imgo = document.createElement("img")
 					imgo.src = "/gw/original.png"
 					imgo.id = "imgo"
-					imgo.width = 100 %
+					imgo.style = "width: 100%"
 					document.body.appendChild(imgo)
 				}
 				if (localStorage.have[i] == "p") {
