--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 				} else {
 					sessionStorage.billinfo = 0;
 				}
-				if (localStorage.isBuy == "undefined") {//是否买密码
+				if (localStorage.isBuy == undefined) {//是否买密码
 					localStorage.isBuy = 0;
 				}
-				if (localStorage.have == "undefined") {
+				if (localStorage.have == undefined) {
 					localStorage.have = "";
 				}
 			}
